# Medium-Stealth-Bot

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Project-Overview.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  contracts.yml  release.yml  secrets.yml
.playwright-cli/: page-2026-04-23T15-45-50-464Z.yml
captures/: FOLLOW_ACTION_NOTE.md  IMPLEMENTATION_NOTES.md  README.md  manifest.json
captures/final/: implementation_ops_2026-02-24.json  implementation_ops_2026-04-23.json  live_capture_2026-02-24.json  live_capture_2026-04-20.json  live_capture_2026-04-23.json  live_ops_2026-02-24.json  live_ops_2026-04-20.json  live_ops_2026-04-23.json  practical_capture_2026-02-21.json  practical_ops_2026-02-21.json
captures/scripts/: live_graphql_capture.js
docs/: PROMOTION_POLICY.md  RELEASE.md  ROLLBACK.md  RUNBOOK.md  SCHEDULING.md
ops/scheduling/: com.mediumstealthbot.daily.plist  cron.example
scripts/: check_capture_integrity.py  check_capture_sanitization.py  check_response_contract_paths.py  release_local.sh  run_daily_live.sh  sanitize_captures.py
src/medium_stealth_bot/: __init__.py  artifact_schema.py  auth.py  browser_runtime.py  client.py  comment_templates.py  contract_registry.py  contracts.py  database.py  deployment.py  graph_sync.py  identity.py  logging.py  logic.py  main.py  models.py  observability.py  operations.py  redaction.py  repository.py  safety.py  settings.py  timing.py  (+2 more)
tests/: test_artifact_schema.py  test_auth.py  test_cleanup_rules.py  test_cli_output.py  test_client_modes.py  test_contract_live_builders.py  test_database_migrations.py  test_deployment_profile.py  test_dry_run_fixture_replay.py  test_graph_sync_repository.py  test_graph_sync_service.py  test_live_session.py  test_operations.py  test_reconcile_paging.py  test_redaction.py  test_repository_idempotency.py  test_safety_and_timing.py  test_settings_auth_session.py  test_typed_payloads.py
(+13 files in other folders)
