[project]
name = "medium-stealth-bot"
version = "0.1.0"
description = "Local-first Medium automation scaffold with async GraphQL client and Playwright auth."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "structlog>=25.5.0",
    "typer>=0.24.1",
]

[project.scripts]
bot = "medium_stealth_bot.main:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medium_stealth_bot"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
